[package]
name = "mpt"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.14", default-features = false, features = [
    "rlp",
    "map",
] }
alloy-rlp = { version = "0.3.9", default-features = false, features = [
    "derive",
    "arrayvec",
]}
arrayvec = { version = "0.7", default-features = false }
criterion = "0.5.1"
nybbles = "0.2.1"
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }


[[bench]]
name = "branch"
harness = false

[[bench]]
name = "leaf"
harness = false


[[bench]]
name = "extension"
harness = false
