[package]
name = "mpt"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.14", default-features = false, features = [
    "rlp",
    "map",
] }
alloy-rlp = { version = "0.3.9", default-features = false, features = [
    "derive",
    "arrayvec",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "branch"
harness = false

[[bench]]
name = "leaf"
harness = false

[[bench]]
name = "extension"
harness = false
